<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Right Number</string>

  <!-- Preferences strings -->
  <string name="prefs_title">Right Number Preferences</string>
  <string name="enable_formatting">Enable formatting</string>
  <string name="enable_formatting_summary_on">Phone numbers will be reformatted before dialing.</string>
  <string name="enable_formatting_summary_off">Numbers will be dialed unchanged.</string>
  <string name="carriers_title">Carriers</string>
  <string name="carriers_summary">Carriers to use when dialing from countries that support it</string>
  <string name="test_formatting">Test formatting</string>
  <string name="test_formatting_summary">Choose this option to see how a number would be formatted.</string>
  <string name="test_original_number">Original dialed number:</string>
  <string name="test_blank_number">Type a phone number.</string>
  <string name="test_formatted_number">Formatted number:</string>
  <string name="test_formatted_blank_number">Type a number above to see how it would be formatted.</string>
  <string name="test_dialing_from">Dialing from:</string>
  <string name="test_line_from">Using a phone line from:</string>
  <string name="change_contacts_to_international">Format all contacts\' numbers</string>
  <string name="change_contacts_to_international_summary">This will change ALL your Android contacts to have phone numbers in the international format (Right Number will know how to use the result for dialing locally).</string>
  <string name="change_contacts_confirm">We will update ALL your contacts\' phone numbers to international formats, which will make it simple to dial with or without Right Number from most countries.\n\nAre you sure?</string>
  <string name="change_contacts_progress_title">Updating contacts</string>
  <string name="change_contacts_progress_formatting">Formatting numbers&#8230;</string>
  <string name="change_contacts_progress_applying">Saving changes&#8230;</string>
  <string name="change_contacts_partial_failure">Some or all of your contacts were not updated.</string>
  <string name="change_contacts_cancelled">Operation cancelled. Some of your contacts may not have been updated.</string>
  <string name="change_contacts_success">All contacts updated successfully.</string>

  <!-- Country names -->
  <string name="bolivia">Bolivia</string>
  <string name="brazil">Brazil</string>
  <string name="colombia">Colombia</string>
  <string name="el_salvador">El Salvador</string>
  <string name="france">France</string>
  <string name="guatemala">Guatemala</string>
  <string name="hong_kong">Hong Kong</string>
  <string name="israel">Israel</string>
  <string name="japan">Japan</string>
  <string name="panama">Panama</string>
  <string name="portugal">Portugal</string>
  <string name="singapore">Singapore</string>
  <string name="venezuela">Venezuela</string>

  <!-- Special cases -->
  <string name="enable_carriers_title">Enable carriers</string>
  <string name="enable_carriers_summary_on">Numbers will be have the carrier added when dialing from this country</string>
  <string name="enable_carriers_summary_off">Numbers will be formatted normally, even when dialing from this country</string>
  <string name="carrier_title">Long-distance carrier</string>
  <string name="carrier_summary">Select the telephony carrier which will be used for long-distance calls</string>
  <string name="international_carrier_title">International carrier</string>
  <string name="international_carrier_summary">Select the telephony carrier which will be used for international calls</string>
  <string name="default_carrier">Default</string>
  <string name="invalid_number">Invalid number for region. Using it as-is.</string>
<string name="international_mode">International mode</string>
<string name="enable_international_mode_summary_on">Format numbers using international mode.</string>
<string name="enable_international_mode_summary_off">Format numbers using local mode.</string>
<string name="use_priority_0_receiver">Run as last</string>
<string name="use_priority_0_receiver_summary_on">Will try to be the last one to process the number.</string>
<string name="use_priority_0_receiver_summary_off">Will process numbers before the final number processing (preferred mode).</string>
<string name="default_area_code">Default area code</string>
<string name="default_area_code_summary">Area code to use for local numbers.</string>
<string name="area_code">Area code</string>
<string name="area_code_message">Enter area code to be used as default. Empty or 0 means do not use defaut area code.</string>
</resources>
